feat: 完善脚本控制台功能